--- a/android/WinIt/res/values-v11/app_themes.xml
+++ b/android/WinIt/res/values-v11/app_themes.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- style name="SpinnerAppTheme" parent="android:Widget.Holo.Light.Spinner">
+        <item name="android:background">@drawable/spinner_background_holo_light</item>
+        <item name="android:dropDownSelector">@drawable/list_selector_holo_light</item>
+    </style -->
+
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         <item name="android:editTextBackground">@drawable/edit_text_holo_light</item>
         <item name="android:buttonStyle">@style/ButtonAppTheme</item>
         <item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
         <item name="android:progressBarStyleHorizontal">@style/ProgressBarAppTheme</item>
     </style>
+
 </resources>
