--- a/android/WinIt/res/layout/authentication_activity.xml
+++ b/android/WinIt/res/layout/authentication_activity.xml
@@ -82,7 +82,7 @@
         android:padding="@dimen/gap" >
 
         <EditText
-            android:id="@+id/email_edit"
+            android:id="@+id/email_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
