--- a/android/WinIt/res/layout/forgot_password_fragment.xml
+++ b/android/WinIt/res/layout/forgot_password_fragment.xml
@@ -16,7 +16,7 @@
         android:padding="10dp" />
     
     <EditText
-        android:id="@+id/email_edit"
+        android:id="@+id/email_section"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
