--- a/android/WinIt/res/layout/signup_step1_fragment.xml
+++ b/android/WinIt/res/layout/signup_step1_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/signup_step_1_scroll_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:padding="@dimen/gap"
     android:background="@color/clouds" >
 
@@ -33,7 +33,7 @@
             android:textAllCaps="true" />
 
         <EditText
-            android:id="@+id/name_edit"
+            android:id="@+id/name_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/gap"
@@ -48,7 +48,7 @@
             android:textAllCaps="true" />
 
         <EditText
-            android:id="@+id/email_edit"
+            android:id="@+id/email_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/gap"
@@ -77,11 +77,10 @@
             android:text="@string/birthday"
             android:textAllCaps="true" />
 
-        <EditText
-            android:id="@+id/birthday_edit"
+        <TextView
+            android:id="@+id/birthday_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="date" />
+            style="@style/Widget.Sherlock.Spinner.DropDown.ActionBar" />
     </LinearLayout>
     </ScrollView>
