--- a/android/WinIt/res/values-v11/app_styles.xml
+++ b/android/WinIt/res/values-v11/app_styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+
     <style name="ButtonAppTheme" parent="android:Widget.Holo.Light.Button">
         <item name="android:background">@drawable/btn_default_holo_light</item>
     </style>
@@ -7,7 +8,7 @@
     <style name="ImageButtonAppTheme" parent="android:Widget.Holo.Light.ImageButton">
         <item name="android:background">@drawable/btn_default_holo_light</item>
     </style>
-    
+
     <style name="WhiteButtonAppTheme" parent="android:Widget.Holo.Light.Button">
         <item name="android:background">@drawable/btn_white_holo_light</item>
         <item name="android:textSize">@dimen/button_primary_text_size</item>
@@ -19,14 +20,18 @@
         <item name="android:textSize">@dimen/button_primary_text_size</item>
         <item name="android:textColor">@color/white</item>
     </style>
-    
+
     <style name="WhiteImageButtonAppTheme" parent="android:Widget.Holo.Light.ImageButton">
         <item name="android:background">@drawable/btn_white_holo_light</item>
     </style>
-    
+
     <style name="ProgressBarAppTheme" parent="android:Widget.Holo.Light.ProgressBar.Horizontal">
         <item name="android:progressDrawable">@drawable/progress_horizontal_holo_light</item>
         <item name="android:indeterminateDrawable">@drawable/progress_indeterminate_horizontal_holo_light</item>
     </style>
+
+    <!--  style name="AppTheme" parent="android:Theme.Holo.Light">
+        <item name="android:dropDownSpinnerStyle">@style/SpinnerAppTheme</item>
+    </style -->
 
 </resources>
