--- a/android/WinIt/res/values/app_styles.xml
+++ b/android/WinIt/res/values/app_styles.xml
@@ -16,7 +16,7 @@
     <style name="ImageButtonAppTheme" parent="android:Widget.ImageButton">
         <item name="android:background">@drawable/btn_default_holo_light</item>
     </style>
-    
+
     <style name="WhiteButtonAppTheme" parent="android:Widget.Button">
         <item name="android:background">@drawable/btn_white_holo_light</item>
         <item name="android:minHeight">48dip</item>
@@ -24,26 +24,39 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/button_primary_text_size</item>
     </style>
-    
+
     <style name="FacebookButtonAppTheme" parent="WhiteButtonAppTheme">
         <item name="android:background">@drawable/btn_facebook_holo_light</item>
         <item name="android:textColor">@color/white</item>
     </style>
-    
+
     <style name="WhiteImageButtonAppTheme" parent="android:Widget.ImageButton">
         <item name="android:background">@drawable/btn_white_holo_light</item>
     </style>
-    
+
     <style name="WhiteEditTextAppTheme" parent="android:Widget.EditText">
         <item name="android:background">@drawable/edit_text_holo_light</item>
         <item name="android:textColor">#000000</item>
     </style>
-    
+
     <style name="ProgressBarAppTheme" parent="android:Widget.ProgressBar.Horizontal">
         <item name="android:progressDrawable">@drawable/progress_horizontal_holo_light</item>
         <item name="android:indeterminateDrawable">@drawable/progress_indeterminate_horizontal_holo_light</item>
         <item name="android:minHeight">16dip</item>
         <item name="android:maxHeight">16dip</item>
     </style>
+
+    <!-- style name="SpinnerAppTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/spinner_background_holo_light</item>
+        <item name="android:dropDownSelector">@drawable/list_selector_holo_light</item>
+    </style>
+
+    <style name="SpinnerAppTheme.DropDown">
+        <item name="android:spinnerMode">dropdown</item>
+    </style>
+
+    <style name="SpinnerDropDownItemAppTheme" parent="android:Widget.DropDownItem.Spinner">
+        <item name="android:checkMark">@drawable/btn_radio_holo_light</item>
+    </style -->
 
 </resources>
