--- a/android/WinIt/res/layout/proposals_fragment.xml
+++ b/android/WinIt/res/layout/proposals_fragment.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/proposals_list"
+    android:id="@+id/list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:drawSelectorOnTop="true"
+    android:padding="10dp"
+    android:divider="@null"
+    android:dividerHeight="10dp" />
