--- a/android/WinIt/res/layout/badges_activity.xml
+++ b/android/WinIt/res/layout/badges_activity.xml
@@ -2,12 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-     <ListView
-      android:id="@+id/listBadges"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:listSelector="@drawable/list_selector" >
-    </ListView>
+    android:orientation="vertical">
+
+    <ListView
+        android:id="@+id/listBadges"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:drawSelectorOnTop="true"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:divider="@null"
+        android:dividerHeight="10dp" />
 
 </LinearLayout>
