--- a/android/WinIt/res/layout/proposals_fragment.xml
+++ b/android/WinIt/res/layout/proposals_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:drawSelectorOnTop="true"
-    android:padding="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:divider="@null"
     android:dividerHeight="10dp" />
