--- a/android/WinIt/res/layout/proposals_fragment.xml
+++ b/android/WinIt/res/layout/proposals_fragment.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:drawSelectorOnTop="true"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:divider="@null"
-    android:dividerHeight="10dp" />
+    android:layout_height="match_parent" >
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="10dp"
+        android:drawSelectorOnTop="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
+    
+    <TextView
+        android:id="@+id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_proposals"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/asbestos"
+        android:textStyle="italic" />
+
+</FrameLayout>
