--- a/android/WinIt/res/layout/badges_list_row.xml
+++ b/android/WinIt/res/layout/badges_list_row.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:padding="10dp"
         android:background="@drawable/card_bg_play" >
 
