--- a/android/WinIt/res/layout/promotion_activity.xml
+++ b/android/WinIt/res/layout/promotion_activity.xml
@@ -31,9 +31,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textSize="26sp"
                 android:fontFamily="sans-serif-light"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center" />
 
             <View
                 android:id="@+id/separator"
