--- a/android/WinIt/res/layout/trading_promotions_to_trade.xml
+++ b/android/WinIt/res/layout/trading_promotions_to_trade.xml
@@ -2,10 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
+
     <ListView
-      android:id="@+id/list"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent" >
-    </ListView>
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="10dp"
+        android:drawSelectorOnTop="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
+
 </LinearLayout>
