--- a/android/WinIt/res/layout/promotion_activity.xml
+++ b/android/WinIt/res/layout/promotion_activity.xml
@@ -44,7 +44,7 @@
                 android:layout_height="2dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:background="@color/dark_gray" />
+                android:background="@color/silver" />
 
             <LinearLayout
                 android:id="@+id/playable_promotion_details"
