--- a/android/WinIt/res/layout/quiz_result.xml
+++ b/android/WinIt/res/layout/quiz_result.xml
@@ -3,7 +3,7 @@
     android:id="@+id/quiz_result_wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/turquoise"
+    android:background="@color/belize_hole"
     android:orientation="vertical" >
 
     <LinearLayout
