--- a/android/WinIt/res/menu/menu_share.xml
+++ b/android/WinIt/res/menu/menu_share.xml
@@ -3,5 +3,6 @@
     <item
         android:id="@+id/menu_share"
         android:title="@string/share"
+        android:icon="@drawable/ic_share"
         android:showAsAction="always" />
 </menu>
