--- a/android/WinIt/res/menu/menu_won_promotion.xml
+++ b/android/WinIt/res/menu/menu_won_promotion.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:id="@+id/menu_show"
-        android:title="@string/show"
+        android:id="@+id/menu_redeem"
+        android:title="@string/redeem"
         android:showAsAction="always" />
 </menu>
