--- a/android/WinIt/res/layout/quiz_radio_button.xml
+++ b/android/WinIt/res/layout/quiz_radio_button.xml
@@ -2,7 +2,7 @@
 <RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:layout_margin="10dp"
     android:fontFamily="sans-serif-light"
     android:textSize="18sp"
     android:textColor="@color/white"
